--- a/Designer/Interface/Data/DataElement.xaml
+++ b/Designer/Interface/Data/DataElement.xaml
@@ -29,6 +29,7 @@
 		<RowDefinition Height="Auto" />
 		<RowDefinition Height="Auto" />
 		<RowDefinition Height="Auto" />
+		<RowDefinition Height="Auto" />
 		<RowDefinition Height="*" />
 	</Grid.RowDefinitions>
 	<TextBlock Grid.Row="0" FontSize="14pt" >
@@ -39,37 +40,39 @@
 			</MultiBinding>
 		</TextBlock.Text>
 	</TextBlock>
-	<Grid Name="ServerGrid" Grid.Row="1" >
+	<Grid Name="TypeGrid" Grid.Row="1" >
 		<Grid.ColumnDefinitions>
 			<ColumnDefinition Width="75" />
 			<ColumnDefinition Width="*" />
+		</Grid.ColumnDefinitions>
+		<Label Content="Type:" Margin="0,5,5,5" HorizontalContentAlignment="Center" />
+		<Data:TypeSelector Grid.Column="1" Margin="5" x:Name="DataType" OpenType="{Binding Path=Element.DataType, Mode=TwoWay}" LabelText="Type" VerticalContentAlignment="Center" ToolTip="{Binding Path=Element.DataType}"  />
+	</Grid>
+	<Grid Name="ServerGrid" Grid.Row="2" >
+		<Grid.ColumnDefinitions>
+			<ColumnDefinition Width="75" />
 			<ColumnDefinition Width="*" />
 		</Grid.ColumnDefinitions>
 		<Label Content="Server:" Margin="0,5,5,5" HorizontalContentAlignment="Center" />
-		<Data:TypeSelector Grid.Column="1" Margin="5" x:Name="DataType" OpenType="{Binding Path=Element.DataType, Mode=TwoWay}" LabelText="Type" VerticalContentAlignment="Center" ToolTip="{Binding Path=Element.DataType}"  />
-		<pc:TextBox Grid.Column="2" Margin="5,5,0,5" Name="ElementName" Text="{Binding Path=Element.DataName, UpdateSourceTrigger=PropertyChanged}" LabelText="Name" VerticalContentAlignment="Center" Validate="ElementName_Validate" ToolTip="{Binding Path=Element.DataName}" />
+		<pc:TextBox Grid.Column="1" Margin="5" Name="ElementName" Text="{Binding Path=Element.DataName, UpdateSourceTrigger=PropertyChanged}" LabelText="Name" VerticalContentAlignment="Center" Validate="ElementName_Validate" ToolTip="{Binding Path=Element.DataName}" />
 	</Grid>
-	<Grid Name="ContractGrid" Grid.Row="2" >
+	<Grid Name="ClientGrid" Grid.Row="3" >
 		<Grid.ColumnDefinitions>
 			<ColumnDefinition Width="75" />
-			<ColumnDefinition Width="*" />
 			<ColumnDefinition Width="*" />
 		</Grid.ColumnDefinitions>
 		<ToggleButton Grid.Column="0" Margin="0,5,5,5" Content="Client:" Padding="2,0" IsChecked="{Binding Path=Element.HasClientType}" IsEnabled="{Binding Path=Element.IsDataMember}" Name="GenerateClientType" ToolTip="Tells NETPath to generate a different member type for the client." Unchecked="GenerateClientType_Unchecked" />
-		<Data:TypeSelector Grid.Column="1" Margin="5" x:Name="ClientType" OpenType="{Binding Path=Element.ClientType, Mode=TwoWay}" LabelText="Type" IsEnabled="{Binding Path=Element.HasClientType}" VerticalContentAlignment="Center" ToolTip="{Binding Path=Element.ClientType}"  />
-		<pc:TextBox Grid.Column="2" Margin="5,5,0,5" Name="ClientName" Text="{Binding Path=Element.ClientName, UpdateSourceTrigger=PropertyChanged}" LabelText="Name" IsEnabled="{Binding Path=Element.HasClientType}" VerticalContentAlignment="Center" Validate="ElementName_Validate" ToolTip="{Binding Path=Element.ClientName}" />
+		<pc:TextBox Grid.Column="1" Margin="5" MinHeight="24" Name="ClientName" Text="{Binding Path=Element.ClientName, UpdateSourceTrigger=PropertyChanged}" LabelText="Name" IsEnabled="{Binding Path=Element.HasClientType}" VerticalContentAlignment="Center" Validate="ElementName_Validate" ToolTip="{Binding Path=Element.ClientName}" />
 	</Grid>
-	<Grid Name="XAMLGrid" Grid.Row="3" >
+	<Grid Name="XAMLGrid" Grid.Row="4" >
 		<Grid.ColumnDefinitions>
 			<ColumnDefinition Width="75" />
 			<ColumnDefinition Width="*" />
-			<ColumnDefinition Width="*" />
 		</Grid.ColumnDefinitions>
 		<ToggleButton Grid.Column="0" Margin="0,5,5,5" Content="XAML:" Padding="2,0" IsChecked="{Binding Path=Element.HasXAMLType}" IsEnabled="{Binding Path=Element.IsDataMember}" Name="GenerateXAMLBinding" ToolTip="Tells NETPath to generate a WPF binding for this member." Unchecked="GenerateXAMLBinding_Unchecked" />
-		<Data:TypeSelector Grid.Column="1" Margin="5" x:Name="XAMLType" OpenType="{Binding Path=Element.XAMLType, Mode=TwoWay}" LabelText="Type" IsEnabled="{Binding Path=Element.HasXAMLType}" VerticalContentAlignment="Center" ToolTip="{Binding Path=Element.XAMLType}"  />
-		<pc:TextBox Grid.Column="2" Margin="5,5,0,5" Name="XAMLName" Text="{Binding Path=Element.XAMLName, UpdateSourceTrigger=PropertyChanged}" LabelText="Name" IsEnabled="{Binding Path=Element.HasXAMLType}" VerticalContentAlignment="Center" Validate="ElementName_Validate" ToolTip="{Binding Path=Element.XAMLName}" />
+		<pc:TextBox Grid.Column="1" Margin="5" MinHeight="24" Name="XAMLName" Text="{Binding Path=Element.XAMLName, UpdateSourceTrigger=PropertyChanged}" LabelText="Name" IsEnabled="{Binding Path=Element.HasXAMLType}" VerticalContentAlignment="Center" Validate="ElementName_Validate" ToolTip="{Binding Path=Element.XAMLName}" />
 	</Grid>
-	<TabControl Grid.Row="4" Margin="0,5,0,0" >
+	<TabControl Grid.Row="5" Margin="0,5,0,0" >
 		<TabItem Padding="10,5" IsSelected="True">
 			<TabItem.Header>
 				<TextBlock Text="Options" FontSize="12pt"/>
