--- a/Designer/Interface/REST/Method.xaml
+++ b/Designer/Interface/REST/Method.xaml
@@ -1,8 +1,8 @@
 ﻿<Grid x:Class="NETPath.Interface.Rest.Method" x:ClassModifier="internal"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-	xmlns:d="http://schemas.microsoft.com/expression/blend/2008" mc:Ignorable="d" 
+	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	xmlns:d="http://schemas.microsoft.com/expression/blend/2008" mc:Ignorable="d"
 	xmlns:Service="clr-namespace:NETPath.Interface.Service"
 	xmlns:Rest="clr-namespace:NETPath.Interface.Rest"
 	xmlns:Data="clr-namespace:NETPath.Interface.Data"
@@ -12,12 +12,12 @@
 	d:DesignHeight="750" d:DesignWidth="750" UseLayoutRounding="True" >
 	<Grid.Resources>
 		<Service:ProtectionLevelConverter x:Key="ProtectionLevelConverter" />
-		<Service:MethodRestVerbsConverter x:Key="MethodRestVerbsConverter" />
+		<Service:RestMethodVerbsConverter x:Key="RestMethodVerbsConverter" />
 		<Service:WebMessageBodyStyleConverter x:Key="WebMessageBodyStyleConverter"/>
 		<Service:WebMessageFormatConverter x:Key="WebMessageFormatConverter" />
 		<pc:NotBoolConverter x:Key="NotBoolConverter" />
 		<pc:BoolVisibilityConverter x:Key="BoolVisibilityConverter" />
-		<DataTemplate x:Key="RestHTTPClientConfigurationTemplate" DataType="{x:Type Projects:RestHTTPClientConfiguration}">
+		<DataTemplate x:Key="RestHttpConfigurationTemplate" DataType="{x:Type Projects:RestHttpConfiguration}">
 			<Grid Name="ItemGrid" >
 				<Grid.ColumnDefinitions>
 					<ColumnDefinition Width="*" />
@@ -35,25 +35,6 @@
 				</StackPanel>
 			</Grid>
 		</DataTemplate>
-		<DataTemplate x:Key="RestHTTPWebConfigurationTemplate" DataType="{x:Type Projects:RestHTTPWebConfiguration}">
-			<Grid Name="ItemGrid" >
-				<Grid.ColumnDefinitions>
-					<ColumnDefinition Width="*" />
-					<ColumnDefinition Width="Auto" />
-				</Grid.ColumnDefinitions>
-				<Grid.RowDefinitions>
-					<RowDefinition Height="Auto" />
-				</Grid.RowDefinitions>
-				<Border x:Name="ItemBG" Grid.ColumnSpan="2" Background="Transparent" CornerRadius="5" />
-				<StackPanel Orientation="Vertical" >
-					<StackPanel Orientation="Horizontal">
-						<Image x:Name="Icon" Source="pack://application:,,,/NETPath;component/Icons/X16/HttpWebConfig.png" Width="16" Height="16" Stretch="None" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="0,0,4,0" />
-						<TextBlock Text="{Binding Path=Name}" Foreground="{StaticResource DefaultFontColor}" FontFamily="{StaticResource DefaultFontFamily}" FontSize="10pt" />
-					</StackPanel>
-				</StackPanel>
-			</Grid>
-		</DataTemplate>
-		<Rest:RequestConfigurationTemplateSelector x:Key="RequestConfigurationTemplateSelector" WebTemplate="{StaticResource RestHTTPWebConfigurationTemplate}" ClientTemplate="{StaticResource RestHTTPClientConfigurationTemplate}" />
 		<Style x:Key="{x:Type ComboBoxItem}" TargetType="{x:Type ComboBoxItem}">
 			<Setter Property="SnapsToDevicePixels" Value="true"/>
 			<Setter Property="OverridesDefaultStyle" Value="true"/>
@@ -92,7 +73,7 @@
 	<Label Content="Server Name:" Grid.Column="1" Grid.Row="1" VerticalContentAlignment="Center" HorizontalAlignment="Left" Width="100" />
 	<pc:TextBox Text="{Binding Path=MethodData.ServerName}" Name="ServerName" Grid.Column="1" Grid.Row="1" Height="23" Margin="100,5,5,5" ToolTip="{Binding Path=MethodData.ServerName}" />
 	<Label Content="HTTP Verb:" HorizontalAlignment="Left" Margin="0,5" VerticalContentAlignment="Center" VerticalAlignment="Top" Grid.Row="2" Grid.Column="0" />
-	<ComboBox Height="23" Margin="90,5,5,5" SelectedIndex="{Binding Path=MethodData.Method, Converter={StaticResource MethodRestVerbsConverter}}" VerticalContentAlignment="Center" VerticalAlignment="Top" Grid.Row="2" Grid.Column="0" >
+	<ComboBox Height="23" Margin="90,5,5,5" SelectedIndex="{Binding Path=MethodData.Method, Converter={StaticResource RestMethodVerbsConverter}}" VerticalContentAlignment="Center" VerticalAlignment="Top" Grid.Row="2" Grid.Column="0" >
 		<ComboBoxItem Content="GET" />
 		<ComboBoxItem Content="POST" />
 		<ComboBoxItem Content="PUT" />
